--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 /* Custom font loading for text overlays */
+/* Paths use root-relative URLs - Next.js basePath will handle prefixing automatically */
 @font-face {
   font-family: 'Impact';
-  src: url('/gif-new/fonts/impact.ttf') format('truetype');
+  src: url('/fonts/impact.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,7 +14,7 @@
 
 @font-face {
   font-family: 'Arial';
-  src: url('/gif-new/fonts/arial.ttf') format('truetype');
+  src: url('/fonts/arial.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -21,7 +22,7 @@
 
 @font-face {
   font-family: 'Helvetica';
-  src: url('/gif-new/fonts/helvetica.ttf') format('truetype');
+  src: url('/fonts/helvetica.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -29,7 +30,7 @@
 
 @font-face {
   font-family: 'Times';
-  src: url('/gif-new/fonts/times.ttf') format('truetype');
+  src: url('/fonts/times.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -37,7 +38,7 @@
 
 @font-face {
   font-family: 'Courier';
-  src: url('/gif-new/fonts/courier.ttf') format('truetype');
+  src: url('/fonts/courier.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -45,7 +46,7 @@
 
 @font-face {
   font-family: 'Anton';
-  src: url('/gif-new/fonts/anton.ttf') format('truetype');
+  src: url('/fonts/anton.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
